test/files/pos/t604.scala
object Test
{
        type T = Foo.type
        object Foo

        def main(argv : Array[String]) : Unit = {
        }
}
